Development: Consistently use try with resources for file operations (#4843)